test/custom/bad/typeclass_rec_inst_parent_dict.mle
class K 'a { k : 'a }
class K 'a => L 'a { l : 'a }

instance L int { l = k[int] }
instance K int { k = 0 }
